fix: rend le focus visible sur les cards (#2038)

--- a/src/client/components/ui/Card/Article/ArticleCard.module.scss
+++ b/src/client/components/ui/Card/Article/ArticleCard.module.scss
@@ -78,3 +78,8 @@
     margin-top: 1rem;
   }
 }
+
+.link {
+  display: inline-block;
+  width: 100%;
+}
